--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>This is a program</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, officia iusto! Nobis ullam nemo numquam iure debitis, quis, voluptatibus exercitationem optio, quam temporibus velit hic maiores quaerat atque repellendus doloribus.</p>
+     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, magni similique iusto provident voluptates consequatur natus iste reprehenderit, ipsa tempora ipsam asperiores, quasi quidem blanditiis odit illum eos magnam ad?
+     </p>
 </body>
 </html>
